# Qt-Qml-Cmake

./: .gitignore  build.sh
qml/: AppMenu.qml  HomePage.qml  Marker.qml  RequestDialog.qml  ShowErrors.js  WeatherLocationPage.qml  WeatherMainPage.qml  WeatherPageGenerator.js  WeatherSettingsPage.qml  WeatherSettingsRadioButton.qml  distanceCalculator.js  main.qml  qml.qrc
src/: CMakeLists.txt  filghtdatagenerator.cpp  filghtdatagenerator.h  main.cpp
